refactor(messaging/redis): refactor getMethodInfo - [x] drop getMethodInfo - [x] drop some imports